--- a/config/evoconv2-config.yaml
+++ b/config/evoconv2-config.yaml
@@ -12,6 +12,8 @@ data:
 
 preprocess:
   hidden_size: 20
+  normalized_category: randomwalk
+
 
 train:
   epochs: 200
@@ -21,7 +23,7 @@ train:
 optimizer:
   name: Adam
   Adam:
-    lr: 0.0015
+    lr: 0.0005
     weight_decay: 0.0005
     eps: 0.001
     amsgrad: true
@@ -31,14 +33,13 @@ optimizer:
 
 loss:
   name: rmse
-  alfa: 0.001
 
 model:
   name: Evonet2
   Evonet2:
     n_pred: 12
     hidden_size: 25
-    num_nodes: 266
+    num_nodes: 250
     n_dim: 50
     n_supports: 1
     k_hop: 3
